@@ -136,7 +136,7 @@ class Agent {
 				
 				
 				$modules = new Modules();
-				$filters = array('id_agent' => $this->id, 'all_modules' => true);
+				$filters = array('id_agent' => $this->id, 'all_modules' => true, 'status' => -1);
 				$modules->setFilters($filters);
 				$modules->disabledColumns(array('agent'));
 				$ui->contentBeginCollapsible(__('Modules'));
